[gd_scene load_steps=7 format=2]

[ext_resource path="res://interface/menus/win_screen/win_graphic.png" type="Texture" id=1]
[ext_resource path="res://effects/TransitionRect.tscn" type="PackedScene" id=2]
[ext_resource path="res://interface/menus/win_screen/win_screen.gd" type="Script" id=3]
[ext_resource path="res://interface/ext_button.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Background:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CenterContainer/VBoxContainer/Label:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Background:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CenterContainer/VBoxContainer/GridContainer/LevelLabel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CenterContainer/VBoxContainer/GridContainer/LevelResult:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CenterContainer/VBoxContainer/GridContainer/TimeLabel:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CenterContainer/VBoxContainer/GridContainer/TimeResult:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("CenterContainer/VBoxContainer/GridContainer/MoneyLabel:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("CenterContainer/VBoxContainer/GridContainer/MoneyResult:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("CenterContainer/VBoxContainer/GridContainer/LevelLabel:visible_characters")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("CenterContainer/VBoxContainer/GridContainer/LevelResult:visible_characters")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("CenterContainer/VBoxContainer/GridContainer/TimeLabel:visible_characters")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("CenterContainer/VBoxContainer/GridContainer/TimeResult:visible_characters")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("CenterContainer/VBoxContainer/GridContainer/MoneyLabel:visible_characters")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("CenterContainer/VBoxContainer/GridContainer/MoneyResult:visible_characters")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("CenterContainer/VBoxContainer/RestartButton:rect_position")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 57 ) ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("CenterContainer/VBoxContainer/QuitButton:rect_position")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 74 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "show"
length = 8.0
tracks/0/type = "value"
tracks/0/path = NodePath("Background:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -40 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CenterContainer/VBoxContainer/Label:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Background:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0.258824, 0.258824, 0.258824, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CenterContainer/VBoxContainer/GridContainer/LevelLabel:visible_characters")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 5.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, -1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CenterContainer/VBoxContainer/GridContainer/LevelResult:visible_characters")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 5.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, -1 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CenterContainer/VBoxContainer/GridContainer/TimeLabel:visible_characters")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 5.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, -1 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CenterContainer/VBoxContainer/GridContainer/TimeResult:visible_characters")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 5.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, -1 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("CenterContainer/VBoxContainer/GridContainer/MoneyLabel:visible_characters")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 6.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, -1 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("CenterContainer/VBoxContainer/GridContainer/MoneyResult:visible_characters")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 6.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, -1 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("CenterContainer/VBoxContainer/RestartButton:rect_position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 7, 7.5 ),
"transitions": PoolRealArray( 1, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 200 ), Vector2( 0, 140 ), Vector2( 0, 57 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("CenterContainer/VBoxContainer/QuitButton:rect_position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 7.1, 7.6 ),
"transitions": PoolRealArray( 1, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 200 ), Vector2( 0, 160 ), Vector2( 0, 74 ) ]
}

[node name="WinScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="DarkOverlay" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.658824 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -89.0
margin_top = -60.0
margin_right = 89.0
margin_bottom = 60.0
color = Color( 0, 0, 0, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 45.0
margin_top = 16.0
margin_right = 115.0
margin_bottom = 103.0
rect_min_size = Vector2( 70, 0 )

[node name="Label" type="RichTextLabel" parent="CenterContainer/VBoxContainer"]
margin_right = 70.0
margin_bottom = 14.0
size_flags_horizontal = 3
custom_colors/default_color = Color( 0.972549, 0.772549, 0.227451, 1 )
custom_colors/font_color_shadow = Color( 0.0901961, 0.0823529, 0.0862745, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
bbcode_enabled = true
bbcode_text = "[center][wave amp=32 freq=5]CONGRATULATIONS!"
text = "CONGRATULATIONS!"
fit_content_height = true
scroll_active = false

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 70.0
margin_bottom = 53.0
custom_constants/vseparation = -2
columns = 2

[node name="LevelLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_right = 24.0
margin_bottom = 13.0
custom_colors/font_color = Color( 0.34902, 0.341176, 0.341176, 1 )
text = "Level:"
percent_visible = 0.0

[node name="LevelResult" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 28.0
margin_right = 70.0
margin_bottom = 13.0
size_flags_horizontal = 3
text = "Level 4"
align = 2
percent_visible = 0.0

[node name="TimeLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 11.0
margin_right = 24.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0.34902, 0.341176, 0.341176, 1 )
text = "Time:"
percent_visible = 0.0

[node name="TimeResult" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 28.0
margin_top = 11.0
margin_right = 70.0
margin_bottom = 24.0
text = "00:00.00"
align = 2
percent_visible = 0.0

[node name="MoneyLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 22.0
margin_right = 24.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0.34902, 0.341176, 0.341176, 1 )
text = "Money:"
percent_visible = 0.0

[node name="MoneyResult" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 28.0
margin_top = 22.0
margin_right = 70.0
margin_bottom = 35.0
text = "$1,000,000"
align = 2
percent_visible = 0.0

[node name="RestartButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 70.0
margin_bottom = 70.0001
text = "Restart"
script = ExtResource( 4 )

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 70.0
margin_bottom = 87.0
custom_colors/font_color_hover = Color( 0.972549, 0.772549, 0.227451, 1 )
text = "Quit"
script = ExtResource( 4 )

[node name="TransitionRect" parent="." instance=ExtResource( 2 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/show = SubResource( 2 )
